Task-2/sub-task-3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: upg-loadme-app-service
  namespace: demo
spec:
  type: NodePort
  selector:
    app: upg-loadme-app
  ports:
    - nodePort: 31479
      port: 8080
      targetPort: 3000
