Task-2/sub-task-3/connect-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "upg-loadme-app-ingress"
  namespace: "demo"
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - http:
        paths:
            - path: /*
              backend:
                serviceName: "upg-loadme-app-service"
                servicePort: 80
